--- a/src/main/resources/ucf/assignments/inventory.fxml
+++ b/src/main/resources/ucf/assignments/inventory.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #00A4EF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #00A4EF;" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ucf.assignments.InventoryController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -21,7 +21,10 @@
     <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <TextArea fx:id="textWindow" editable="false" prefHeight="200.0" prefWidth="200.0" style="-fx-border-style: solid;" GridPane.columnSpan="2" GridPane.rowSpan="3" />
+      <TextArea fx:id="textWindow" editable="false" prefHeight="200.0" prefWidth="200.0" style="-fx-border-style: solid;" GridPane.columnSpan="2" GridPane.rowSpan="3">
+         <font>
+            <Font size="15.0" />
+         </font></TextArea>
       <TextField alignment="CENTER" editable="false" style="-fx-border-style: solid; -fx-background-color: #006b9c;" text="Commands" GridPane.columnIndex="2" GridPane.valignment="TOP">
          <font>
             <Font size="16.0" />
